# Leang-Vocabulary

./: .gitignore  CMakeLists.txt  README.md  config.txt  leang.cfg
databaseDIR/: leang.db  leang.sqbpro
include/: database.hpp  konsol.hpp  leang.hpp  wx_gui.hpp
src/: database.cpp  konsol.cpp  leang.cpp  main.cpp  wx_gui.cpp
